<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editItemFragment.EditSaleFragment">


    <!--Date-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editDateBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editCashBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Cash-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editCashBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cash"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/editDateBox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editCardBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Card -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editCardBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/editCashBox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnRegisterSale"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!--Add Sale-->
    <Button
        android:id="@+id/btnRegisterSale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/editCardBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="OnClick" />

    <!-- Cancel button -->
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/editCardBox"
        app:layout_constraintStart_toEndOf="@id/btnRegisterSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/purple_500"
        app:elevation="5dp"
        style="?attr/materialButtonOutlinedStyle"/>


</androidx.constraintlayout.widget.ConstraintLayout>